[package]
name = "deno_imaging"
version = "0.1.0"
authors = ["keroxp <kerokerokerop@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.22"
deno_core = "0.33.0"